@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4RegularXrayTRmodel.cc,v 1.1 2000-05-16 13:44:51 grichine Exp $
+// $Id: G4RegularXrayTRmodel.cc,v 1.2 2000-06-06 08:47:48 mora Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -83,7 +83,7 @@ G4RegularXrayTRmodel::GetStackFactor( G4double energy,
 
   //  G4complex F1 = ( 0.5*(1+Qa)*(1+H) - Ha - Qa*Hb )/(1-H) ;
 
-  G4complex F2 = (1-Ha)*(Qa-Ha)*Hb*(1-Hs)*(Q-Hs) ;
+  G4complex F2 = (1.0-Ha)*(Qa-Ha)*Hb*(1.0-Hs)*(Q-Hs) ;
 
   F2          *= pow(Q,fPlateNumber) - pow(H,fPlateNumber) ;
 
